[package]
name = "composter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.22"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0-beta.3"

[[bench]]
name = "cache_benchmarks"
harness = false
